<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency Room</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_data">Patient Personal Data</string>
    <string name="search">Search</string>
    <string name="health_card_number">Health Card Number</string>
    <string name="retrieved_data">Hello</string>
    <string name="browse_patients">Browse all patients</string>
    <string name="title_activity_vital_signs_display">Record Vital Signs</string>
    <string name="vital_activity_header">Vital Signs</string>
    <string name="temp">Temperature (°C)</string>
    <string name="new_visit_record">New visit record</string>
    <string name="view_record_history">View record history</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="save">Save</string>
    <string name="introduction">Welcome to our ER_207 database!</string>
    <string name="saving_vitals">Save</string>
    <string name="title_activity_display_visit_record">Visit history</string>
    <string name="history">Bla</string>
    <string name="TextView">History</string>
    <string name="view_history">View History</string>

</resources>
