<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayData" >

    <TextView
        android:id="@+id/retrieved_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieved_data"
        android:textSize="15sp" />
	
    <Button
        android:id="@+id/new_visit_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_record_history"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/new_visit_record"/>

    <Button
        android:id="@+id/view_record_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/view_record_history"/>
    
   
</RelativeLayout>
