<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.project.Vital_signsActivity" >

<RelativeLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="#FFF0F5"
    android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/vital_activity_header"
            android:textColor="#F4A460"
            android:textSize="20sp" />
    
    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="102dp"
        android:text="@string/temp"
        android:textColor="#800000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/heart_rate"
        android:layout_below="@+id/heart_rate"
        android:layout_marginTop="62dp"
        android:text="@string/blood_pressure"
        android:textColor="#800000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temp"
        android:layout_below="@+id/temp"
        android:layout_marginTop="60dp"
        android:text="@string/heart_rate"
        android:textColor="#800000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/heart_rate"
        android:maxLength="2"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/blood_pressure"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/heart_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:layout_alignBottom="@+id/heart_rate"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/blood_pressure"
        android:ems="10" />

    <EditText
        android:id="@+id/blood_pressure_value"
        android:layout_width="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/blood_pressure"
        android:layout_alignLeft="@+id/temp_value"
        android:layout_alignRight="@+id/heart_rate_value"
        android:ems="10" />
    
</RelativeLayout>

<Button
    android:id="@+id/save_vitals"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/header"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:text="@string/saving_vitals" 
    android:onClick="onClick" />

</RelativeLayout>